# pybragi

./: .gitignore  README.md  build.md  pyproject.toml  requirements-build.txt  roadmap.md
demo/gpu_use_report/: gpu_use_report.py
demo/server_demo/: config.py  forward_transmit.py  main.py  upload_sts.py
demo/wanxiang/: comfyui_wanxiang.conf
demo/wanxiang/handlers/: generate_sdxl.py
demo/wanxiang/logic/: comfy_client.py  comfy_graph.py  config.py  infer.py
demo/wanxiang/workflow/: 0830workflow-sdxl-lora.json  0830workflow_api-sdxl-lora.json
pybragi/: bragi_config.py  version.py
pybragi/base/: async_manager.py  async_utils.py  base_handler.py  metrics.py  ps.py  species_queue.py  time_utils.py
pybragi/model/llm_api/: api_demo.py  chat_completions.py
pybragi/proto/: ws_audio.py
pybragi/server/: dao_server_discovery.py  log_request.py
pybragi/zy/: signature.py
src/base/: base_handler.py  log.py  metrics.py  time_utils.py
src/demo/wanxiang/: main.py  readme.md  wanxiang.conf  wanxiang_readme.md
src/demo/wanxiang/logic/: wd14_tagger.py
src/llm/: model_utils.py
test/: bad_log.py  gpu_mem_track_test.py  log_request.py  request_demo.py  rwlock_bad.py  safe_dir.py  sample.py  snowflake_x.py  sorted_test.py  tenacity_retry.py  test_diffusion_model.py  test_load_pth.py  test_master.py  test_model_para.py  test_sts_upload.py
test/crypto/: test_ase_ecb_pkcs5.py
test/event_loop/: async_manager_run_batch.py  async_manager_test.py  async_utils_test.py  async_wait.py  asyncio_event_loop_errors_demo.py  ccc.py  simple_poppush_with_semaphore_test.py  test_wrap_future.py  thread_to_ev.py  time_utils_test.py
test/openai-server/: chat_completions.py  forward_chat_completions.py  openai-cli.py  openai_transmit.py
test/paddle/: ocr-sheet.py
test/rvc/: net_g_infer.py
test/small/: clas.py
test/ws/: proto_ws.py  simple_ws.py  ws_cli.py  xx.py
test/zeromq/: sender.py  worker.py
