[build-system]
# Should be mirrored in requirements-build.txt
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project.urls]
homepage = "https://github.com/DeJoker/pybragi" 
Repository = "https://github.com/DeJoker/pybragi"


[project]
name = "pybragi"
version = "0.0.6"
description = "pybragi is server framework"
authors = [
    {name = "DeJoker", email = "localjie@163.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "facebook-scribe==2.0.post1",
    "thrift",
    "pydantic",
    "psutil>=5.9.1",
    "tornado>=6.0.2",
    "pymongo>=3.4.0",
    "kafka-python>=2.0.2",
    "requests>=2.22.0",
    "prometheus_client>=0.14.1",
    "facebook-scribe==2.0.post1",
    "numpy",
    "uvicorn",
    "nvidia-ml-py",
    "GPUtil",
]

[tool.poetry]
repository = "https://github.com/DeJoker/pybragi"


[tool.setuptools.packages.find]
include = ["pybragi*"] 
exclude = ["assets*", "benchmark*", "docs*", "dist*", "demo*", "tests*",]

[project.optional-dependencies]
image = ["opencv-python>=4.4.0", "pillow"]
test = ["jsonlines", "matplotlib", "ujson>=1.35"]
all = ["pybragi[image]"]
dev = ["pybragi[all]", "pybragi[test]"]
